@@ -1,3 +1,3 @@
-EBUILD imgur-integration-9999.ebuild 1242 RMD160 f6794f3fd4317bf616b92db481d2bbf155e9ba1b SHA1 c8e60d98ffd7a7922957ad34d84d795525dd1ee4 SHA256 18ee1e1c22fee42cec2d0ba7c03a8445d58cef00aec001711272ecc9b18c553f
-MISC ChangeLog 641 RMD160 7da34e9cfda63e88f6629fda6a855fd7b2d0ac3d SHA1 fc3617db58f6fc722e4503454ff99b329aeb1968 SHA256 c94ecdc660ace3c27ca828f6a217b11fa06e4c1901193a3f8ca2600f8098d900
+EBUILD imgur-integration-9999.ebuild 1303 RMD160 c04b194f58899b1550328173536aef3b60640982 SHA1 8a3ce8ff98323f1264e1d34302885e9d2993347e SHA256 0d4f7adc46ecb2fa906dda305e15dd164a564cef0b3a05a74b104f5582f306c0
+MISC ChangeLog 758 RMD160 41251290d75f360f2c9608077511dc21f10390f7 SHA1 3016f85cf9f70d5fde23b1de2abbff4b45f740b1 SHA256 8edc3410537ffdf6f66e776d1db6c9709a8b2d9aee525692f63b09e15053accc
 MISC metadata.xml 318 RMD160 9b0184a48e30234241f34ffb077c90d1948e26d2 SHA1 614fa9d995dd9505fdc07a34a24f169930c13bfc SHA256 32fecb4577347fc4efbcd8fc2ea3d8144d8fe9a3c9037e0400dbb14c5adb40f1
