@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Feb 2011; Dean Matzkov <bapabooiee@gmail.com>
+  imgur-integration-9999.ebuild:
+  Updated bleeding-edge ebuild.
+
   23 Jan 2011; Dean Matzkov <bapabooiee@gmail.com>
   -imgur-integration-0.3.0.ebuild, imgur-integration-9999.ebuild:
   Removed v0.3.0, since it's now in Sunrise. Polished-up v9999.
